# todo-demo-backend

./: .dockerignore  .env.example  .gitattributes  CONTAINERIZATION_PLAN.md  CONTAINERIZATION_SUMMARY.md  DOCKER_TESTING_CHECKLIST.md  Dockerfile  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  justfile  main.py  pyproject.toml  railway.toml
.github/workflows/: deploy-railway.yml
alembic/: env.py
alembic/versions/: 0c4431ca83dd_add_default_columns.py  4ff83a080ba6_create_kanban_tables.py  a2140c338b0b_create_todos_table.py
app/: main.py
app/api/: __init__.py  columns.py  tasks.py  todos.py  users.py
app/core/: config.py
app/database/: connection.py
app/database/implementations/: column_repository.py  task_repository.py  todo_repository.py  user_repository.py
app/database/protocols/: column_protocol.py  task_protocol.py  todo_protocol.py  user_protocol.py
app/database/sql/: column_queries.py  task_queries.py  todo_queries.py  user_queries.py
app/models/: column.py  task.py  todo.py  user.py
code_plans/: kanban_crud_implementation_plan.md
